# cb50_ctrl

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README  cb50_ctrl_params.json
cb50_ctrl/: .ycm_extra_conf.py  CMakeLists.txt
cb50_ctrl/src/: Database.cpp  Database.h  Log.cpp  Log.h  PIRegulator.cpp  PIRegulator.h  Parameters.cpp  Parameters.h  ProcessData.cpp  ProcessData.h  ProcessValue.cpp  ProcessValue.h  Recipe.cpp  Recipe.h  TrendData.cpp  TrendData.h  main.cpp
kmod/: CMakeLists.txt
kmod/gpio_pwm/: CMakeLists.txt  gpio_pwm.c
schematic/: panel.sch
schematic/rpi_interface/: rpi_interface.kicad_pcb  rpi_interface.net  rpi_interface.pro  rpi_interface.rules  rpi_interface.sch
src/: PIRegulator.cpp  PIRegulator.h  Parameters.cpp  Parameters.h  TrendData.cpp  TrendData.h  main.cpp
www/: index.html  log.html  parameters.html  trend.html
www/assets/css/: style.css
www/assets/js/: log.js  parameters.js  recipe.js  trend.js
